# attentionpay

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  LICENSE  README.md  README.pt-BR.md  package-lock.json  package.json
.github/workflows/: build-contracts.yml  deploy.yml
app/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
app/app/: tailwind.config.js
app/components/: Dashboard.tsx
app/lib/i18n/: I18nContext.tsx  translations.ts
app/pages/: _app.tsx  activities.tsx  dashboard.tsx  forgot-password.tsx  index.tsx  profile.tsx  register.tsx  reset-password.tsx  settings.tsx  support.tsx  verify.tsx
app/styles/: globals.css
app/types/: global.d.ts  solana-wallet.d.ts  solana.d.ts
docs/: BUSINESS.md  PITCH.md  TECHNICAL.md
programs/attention_ledger/: Cargo.toml
programs/attention_ledger/src/: lib.rs
programs/payout_policy/: Cargo.toml
programs/payout_policy/src/: lib.rs
programs/reputation_proof/: Cargo.toml
programs/reputation_proof/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: config.rs  main.rs  meter.rs  solana_client.rs
sdk/: attention.ts
solana/: Anchor.toml  Cargo.toml  package.json.bak  tsconfig.json
solana/.cargo/: config.toml
solana/programs/attention_ledger/: Cargo.toml
solana/programs/attention_ledger/src/: lib.rs
solana/programs/payout_policy/: Cargo.toml
solana/programs/payout_policy/src/: lib.rs
solana/programs/reputation_proof/: Cargo.toml
solana/programs/reputation_proof/src/: lib.rs
solana/proxy/: Cargo.toml
solana/proxy/src/: config.rs  main.rs  solana_client.rs  x402.rs
solana/proxy/src/middleware/: mod.rs
tests/: attentionpay.ts
