
[workspace]
members = [
    "programs/payout_policy",
    "programs/attention_ledger",
    "programs/reputation_proof",
]
exclude = ["proxy"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1